<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8">

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_weight="3"
        android:gravity="bottom">
        
        <ImageView
            android:id="@+id/mAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_marginBottom="@dimen/hl_login_margin_item"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mUsernameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_login_username"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_marginBottom="@dimen/hl_login_margin_item"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_login_password"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/hl_login_button_size"
            android:layout_marginTop="@dimen/hl_login_margin_top_button"
            app:cardCornerRadius="8dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/mLogin"
                style="@style/Himegami.Login.Button"
                android:text="@string/label_login_sign_in"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/hl_login_button_size"
            android:layout_marginTop="@dimen/hl_login_margin_top_button"
            app:cardCornerRadius="8dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/mRegister"
                style="@style/Himegami.Login.Button"
                android:text="@string/label_login_register"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_weight="2">


    </LinearLayout>

</LinearLayout>