<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAFFFFFF"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:weightSum="10">

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_weight="1.87"
        android:gravity="bottom">
        
        <ImageView
            android:id="@+id/mAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_marginBottom="@dimen/hl_login_margin_item"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mFirstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_login_first_name"
                android:inputType="textNoSuggestions"
                android:maxLength="255"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_marginBottom="@dimen/hl_login_margin_item"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mLastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_login_last_name"
                android:inputType="textNoSuggestions"
                android:maxLength="255"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_marginBottom="@dimen/hl_login_margin_item"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mUsernameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_login_email"
                android:inputType="textNoSuggestions"
                android:maxLength="32"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_marginBottom="@dimen/hl_login_margin_item"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_login_password"
                android:inputType="textPassword"
                android:maxLength="24"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_height="0dp"
        android:layout_weight="2">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hl_login_margin_top_button"
            app:cardCornerRadius="4dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/mRegister"
                style="@style/Himegami.Login.Button"
                android:text="@string/label_login_register"/>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        style="@style/Himegami.Login.Panel"
        android:layout_weight="2"
        android:gravity="center">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/mBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_bon_back_48dp"/>


    </LinearLayout>

</LinearLayout>