<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3.5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/bon_fragment_wallet_margin"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/Bon.Text.Wallet.Label"
            android:text="@string/label_wallet_you_have"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/mCredit"
                style="@style/Bon.Text.Wallet.Value"
                android:text="4906.55"/>

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="@dimen/bon_fragment_wallet_currency_size"
                android:layout_height="@dimen/bon_fragment_wallet_currency_size"
                android:src="@drawable/bons"
                app:civ_border_color="@color/bon_app_secondary"
                android:foregroundGravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/Bon.Text.Wallet.Label"
            android:text="@string/label_wallet_amount_due"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/mDue"
                style="@style/Bon.Text.Wallet.Value"
                android:text="1207.75"/>

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="@dimen/bon_fragment_wallet_currency_size"
                android:layout_height="@dimen/bon_fragment_wallet_currency_size"
                android:src="@drawable/bons"
                app:civ_border_color="@color/bon_app_secondary"
                android:foregroundGravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp">

            <android.support.v7.widget.AppCompatButton
                style="@style/Bon.Wallet.Button"
                android:text="@string/label_wallet_pay_with_bons"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"/>

</LinearLayout>